[package]
name = "concrete"
version = "0.1.0"
authors = ["Akul Pillai <contact@akulpillai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.18.0"
linux-personality = "1.0.0"
derive_more = "0.99.9"
anyhow = "1.0.32"
