[package]
name = "concrete"
version = "0.1.0"
authors = ["Akul Pillai <contact@akulpillai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.25.0"
linux-personality = "1.0.0"
derive_more = "0.99.9"
anyhow = "1.0.32"
elf = "0.7.4"
capstone = "0.7.0"
log = "0.4"
env_logger = "0.9"
